--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #000000;
-    color: #ffffff;
+    background-color: #f4f4f4;
+    color: #333;
 }
 
 .header {
@@ -16,7 +16,7 @@ body {
 }
 
 .header img {
-    max-width: 100%; /* Réduction de la largeur de l'image */
+    max-width: 80%; /* Réduction de la largeur de l'image */
     height: auto;
 }
 
@@ -26,7 +26,6 @@ body {
 }
 
 .filtre {
-    color : black;
     background-color: #fff;
     padding: 20px;
     margin: 20px auto;
@@ -62,7 +61,6 @@ body {
 }
 
 .rep {
-    color: black;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -91,19 +89,20 @@ body {
     width: 100%;
     padding: 10px;
     border: none;
-    background-color: #ffd0b6; /* Couleur du fond */
+    background-color: #007bff; /* Couleur du fond */
     color: #fff; /* Couleur du texte */
     border-radius: 5px;
     cursor: pointer;
 }
 
+/* Empêcher les barres de défilement des suggestions de sortir de la div .filtre */
 #suggestions,
 #suggestionsloc {
     position: absolute;
     z-index: 1;
     color: rgb(0, 0, 0);
     background-color: #fff;
-    border: none;
+    border: 1px solid #ddd;
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     list-style-type: none;
@@ -112,29 +111,5 @@ body {
     width: calc(100% - 22px);
     max-height: 200px;
     overflow-y: auto;
-    left: 0; 
+    left: 0; /* Aligner avec le bord gauche de la div .filtre */
 }
-
-#suggestions li,
-#suggestionsloc li {
-    padding: 10px;
-    cursor: pointer;
-}
-
-#suggestions li:hover,
-#suggestionsloc li:hover {
-    background-color: #f2f2f2;
-}
-
-#suggestions li,
-#suggestionsloc li {
-    padding: 10px;
-    cursor: pointer;
-    border-bottom: 1px solid #ccc; /* Ajouter une séparation entre les suggestions */
-}
-
-#suggestions li:last-child,
-#suggestionsloc li:last-child {
-    border-bottom: none; /* Supprimer la séparation pour le dernier élément */
-}
-
