--- a/asset/style.css
+++ b/asset/style.css
@@ -6,13 +6,30 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #000000;
     color: #ffffff;
+}
+
+.grain{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: url('img/grain-texture.png') repeat;
+}
+
+
+.grain::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    mix-blend-mode: overlay; /* Mélange le grain avec le contenu sous-jacent */
+    opacity: 0.5; /* Réglez l'opacité du grain selon vos préférences */
 }
 
 .header {
     text-align: center;
-    padding: 20px 0;
 }
 
 .header img {
@@ -20,10 +37,6 @@ body {
     height: auto;
 }
 
-.header h1 {
-    margin-top: 10px;
-    font-size: 2em;
-}
 
 .filtre {
     color : black;
@@ -82,8 +95,14 @@ body {
     font-size: 1.5em;
 }
 
-.rep p {
+.rep li {
     margin-top: 5px;
+    color: #000000;
+}
+
+.rep p{
+    margin-top: 5px;
+    color: #000000;
 }
 
 .filtre input[type="submit"] {
@@ -91,8 +110,8 @@ body {
     width: 100%;
     padding: 10px;
     border: none;
-    background-color: #ffd0b6; /* Couleur du fond */
-    color: #fff; /* Couleur du texte */
+    background-color: #F55208; /* Couleur du fond */
+    color: #000000; /* Couleur du texte */
     border-radius: 5px;
     cursor: pointer;
 }
